[gd_scene load_steps=5 format=3 uid="uid://c54ckgp1skvh1"]

[ext_resource type="PackedScene" uid="uid://b4arq1526vwrb" path="res://assets/blends/pickups/blue_crystal.blend" id="1_t6ih8"]
[ext_resource type="Script" uid="uid://8rny61ogxc2p" path="res://scenes/pickups/crystals/blue/blue_crystal.gd" id="2_6jh3y"]
[ext_resource type="AudioStream" uid="uid://d0lgl4rwd3dtj" path="res://assets/wav/pickups/shieldUp.wav" id="3_3l0hs"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_j65jw"]

[node name="BlueCrystal" instance=ExtResource("1_t6ih8")]
script = ExtResource("2_6jh3y")

[node name="AnimationPlayer" parent="." index="1"]
autoplay = "ArmatureAction"

[node name="StaticBody3D" type="Area3D" parent="." index="2"]
collision_layer = 257
collision_mask = 257

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CylinderShape3D_j65jw")

[node name="Despawner" type="Node" parent="." index="3"]

[node name="DespawnTimer" type="Timer" parent="Despawner" index="0"]
wait_time = 2.0
one_shot = true

[node name="FlashTimer" type="Timer" parent="Despawner" index="1"]
wait_time = 0.25
autostart = true

[node name="AudioFx" type="AudioStreamPlayer3D" parent="." index="4"]
stream = ExtResource("3_3l0hs")
bus = &"UI"

[connection signal="body_entered" from="StaticBody3D" to="." method="_on_static_body_3d_body_entered"]
[connection signal="timeout" from="Despawner/DespawnTimer" to="." method="_on_despawn_timer_timeout"]
[connection signal="timeout" from="Despawner/FlashTimer" to="." method="_on_flash_timer_timeout"]
[connection signal="finished" from="AudioFx" to="." method="_on_audio_fx_finished"]
